--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "macro_engine"
-version = "0.3.0"
-authors = ["Tanner <Tanner@NorthPeak.Software>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+name = "macro_engine_hd2"
+version = "0.4.0"
+authors = ["Sevenn <hello@sevenn.fr>"]
+edition = "2021"
 
 [dependencies]
 enigo = "0.3.0"
-rand = "0.9.0"
